--- a/MyTiKi/app/src/main/AndroidManifest.xml
+++ b/MyTiKi/app/src/main/AndroidManifest.xml
@@ -15,8 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".main.order.activity.AddressActivity" />
-        <activity android:name=".main.cart.activity.CartActivity" />
+        <activity android:name=".main.fragment.user.order.activity.OrderDetailActivity"></activity>
+        <activity android:name=".main.fragment.user.order.activity.AddressActivity" />
+        <activity android:name=".main.fragment.user.cart.activity.CartActivity" />
         <activity android:name=".main.fragment.category.activity.ProductOfCategory" />
         <activity android:name=".main.product.activity.FavoriteActivity" />
         <activity android:name=".main.product.activity.ProductDetailActivity" />
@@ -30,13 +31,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name=".main.fragment.user.view.OrderActivity"
+            android:name=".main.fragment.user.order.activity.OrderActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".main.fragment.user.login.activity.SignInUpActivity"
