--- a/MyTiKi/app/src/main/AndroidManifest.xml
+++ b/MyTiKi/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.Light.NoActionBar"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".main.fragment.user.order.activity.OrderDetailActivity"></activity>
+        <activity android:name=".main.fragment.user.order.activity.OrderDetailActivity" />
         <activity android:name=".main.fragment.user.order.activity.AddressActivity" />
         <activity android:name=".main.fragment.user.cart.activity.CartActivity" />
         <activity android:name=".main.fragment.category.activity.ProductOfCategory" />
