--- a/MyTiKi/app/build.gradle
+++ b/MyTiKi/app/build.gradle
@@ -109,32 +109,19 @@ dependencies {
     //permission
     implementation 'pub.devrel:easypermissions:3.0.0'
 
-    def nav_version = "2.3.0-alpha05"
-    // Kotlin
-    //noinspection GradleDependency
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    //noinspection GradleDependency
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-
-    // Dynamic Feature Module Support
-    //noinspection GradleDependency
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
-
-    // Testing Navigation
-    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+    // Java language implementation
+    implementation "androidx.navigation:navigation-fragment:2.3.0-alpha06"
+    implementation "androidx.navigation:navigation-ui:2.3.0-alpha06"
 
     // Kotlin
-    //noinspection GradleDependency
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    //noinspection GradleDependency
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.0-alpha06"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.0-alpha06"
 
     // Dynamic Feature Module Support
-    //noinspection GradleDependency
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.3.0-alpha06"
 
     // Testing Navigation
-    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"
+    androidTestImplementation "androidx.navigation:navigation-testing:2.3.0-alpha06"
 
     // anko
     implementation "org.jetbrains.anko:anko:0.10.8"
