--- a/MyTiKi/app/build.gradle
+++ b/MyTiKi/app/build.gradle
@@ -91,7 +91,7 @@ dependencies {
     // Google's Maven repository to your root-level build.gradle file
     implementation 'com.google.firebase:firebase-database:19.3.0'
     implementation 'com.google.firebase:firebase-messaging:20.1.6'
-
+    implementation 'com.google.firebase:firebase-storage-ktx:19.1.1'
     implementation 'com.jakewharton.rxbinding:rxbinding:0.4.0'
 
     implementation 'com.github.Deishelon:RoundedBottomSheet:1.0.1'
